work in progress: integrate sinonjs into effects test

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
 	<script src="data/jquery-1.9.1.ajax_xhr.min.js"></script>
 
 	<script src="../bower_components/qunit/qunit/qunit.js"></script>
+	<script src="../bower_components/sinon/lib/sinon/util/fake_timers.js"></script>
 	<script src="../bower_components/requirejs/require.js"></script>
 	<!-- See testinit for the list of tests -->
 	<script src="data/testinit.js"></script>
